# ideally

./: .pre-commit-config.yaml  Cargo.toml  README.md
dummy/: README.md
examples/associated-token-account/: Cargo.toml  README.md
examples/associated-token-account/program-test/: Cargo.toml  README.md
examples/associated-token-account/program-test/src/: lib.rs
examples/associated-token-account/program-test/tests/: recover_nested.rs
examples/associated-token-account/spl_associated_token_account/: Cargo.toml
examples/associated-token-account/spl_associated_token_account/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
examples/associated-token-account/spl_associated_token_account/src/tools/: account.rs
examples/associated-token-account/spl_associated_token_account_interface/: Cargo.toml
examples/associated-token-account/spl_associated_token_account_interface/src/: instructions.rs
examples/associated-token-account/spl_associated_token_account_lib/: Cargo.toml
examples/associated-token-account/spl_associated_token_account_lib/src/: lib.rs  pda.rs
examples/associated-token-account/spl_associated_token_account_lib/src/resolvers/: create.rs  mod.rs  recover_nested.rs
