[package]
edition = "2021"
license = "Apache-2.0"
name = "spl-associated-token-account-test"
version = "0.0.0"

[features]
test-sbf = []

[dev-dependencies]
solana-program = "^1.16"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
spl_associated_token_account = { path = "../spl_associated_token_account", features = ["no-entrypoint"] }
spl-token = { version = "^4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "^0.7", features = ["no-entrypoint"] }
